--- a/src/components/acquila.css
+++ b/src/components/acquila.css
@@ -3,7 +3,8 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
-    max-width: 1px;
+    max-width: 0px;
     min-height: 100%;
-    border-right: 1px dashed burlywood;
+    border-right: 3px solid whitesmoke;
+    border-left: 1px solid grey;
 }
