--- a/src/components/fret.css
+++ b/src/components/fret.css
@@ -1,5 +1,6 @@
 .fret {
     width: 24.5%;
+    min-height: 100px;
     /**border-bottom: 10px solid #424036;**/
     background-image: url("../style/fret.jpg");
     background-size: contain;
