--- a/public/ukuaplayee.css
+++ b/public/ukuaplayee.css
@@ -1,10 +1,16 @@
+:root {
+    white-space: nowrap;
+    overflow: hidden;
+}
 
+html {
+    overlfow: hidden;
+}
 
 body {
   height: auto;
   width: auto;
-  max-height: 100vh;
-  max-width: 100vh;
-  overflow: hidden;
+  max-height: 90vh;
+  max-width: 100vw;
   margin: 0;
 }
