--- a/src/components/fret.css
+++ b/src/components/fret.css
@@ -1,16 +1,17 @@
 .fret {
-    width: 24.5%;
-    min-height: 90px;
-    border-bottom: 10px solid #424036;
+    width: 25%;
+    min-height: 5vh;
+    max-height: 20vh;
+    border-bottom: 5px solid #424036;
     background-image: url("../style/fret.jpg");
     background-size: contain;
 }
 
 
 .fret-open {
-    width: 24.5%;
+    width: 25%;
     border-bottom: 10px solid #424036;
-    min-height: 200px;
+    min-height: 24vh;
     z-index: 5;    
 }
 
