--- a/src/components/acquila.css
+++ b/src/components/acquila.css
@@ -4,7 +4,11 @@
     margin-left: auto;
     margin-right: auto;
     max-width: 0px;
-    min-height: 100%;
+    height: 100%;
     border-right: 3px solid whitesmoke;
     border-left: 1px solid grey;
+};
+
+.string-canvas {
+    position: absolute;
 }
