--- a/public/ukuaplayee.css
+++ b/public/ukuaplayee.css
@@ -1,16 +1,14 @@
 :root {
-  white-space: nowrap;
   overflow: hidden;
+  position: relative;
 }
 
 html {
+  display: block;
+  position: absolute;
+  white-space: nowrap;
+  margin: 0;
   overflow: hidden;
+  height: 90%;
 }
 
-body {
-  height: auto;
-  width: auto;
-  max-height: 90vh;
-  max-width: 100vw;
-  margin: 0;
-}
