--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,13 @@
 body {
   background-image: linear-gradient(to bottom right, rgb(192, 112, 55), rgba(44, 18, 1, 0.801));
+  display: block;
+  overflow: hidden;
+  position: relative;
+  height: 70%;
+  width: auto;
+  max-height: 90vh;
+  max-width: 100vw;
+  margin: 0;
 }
 
 .App {
@@ -20,7 +28,7 @@ body {
 
 .App-header {
   background-color: #282c34;
-  min-height: 6vh;
+  min-height: 3vh;
   display: flex;
   flex-direction: column;
   align-items: center;
