--- a/src/components/sound-hole.css
+++ b/src/components/sound-hole.css
@@ -4,6 +4,7 @@
     max-height: 24vh;
     display: flex;
     flex-wrap: wrap;
+    overflow: hidden;
 }
 
 .sound-hole-canvas {
@@ -12,7 +13,7 @@
     position:absolute;
     width: 100%;
     height: 30%;
- 
+    overflow: hidden;
     min-width: 100%;
     z-index: 2;
     opacity: 0.2;
