--- a/src/components/fret.css
+++ b/src/components/fret.css
@@ -1,7 +1,7 @@
 .fret {
     width: 25%;
     min-height: 5vh;
-    max-height: 20vh;
+    max-height: 16vh;
     border-bottom: 5px solid #424036;
     background-image: url("../style/fret.jpg");
     background-size: contain;
@@ -11,8 +11,10 @@
 .fret-open {
     width: 25%;
     border-bottom: 10px solid #424036;
-    min-height: 24vh;
-    z-index: 5;    
+    margin: 0;
+    min-height: 20vh;
+    z-index: 5;
+    overflow: hidden;   
 }
 
 .note-strum {
